# zentoria-personal-edition

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-INDEX.md  DEPLOYMENT-QUICK-REFERENCE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  IMPLEMENTATION-STATUS.md  Makefile  STATUS.md  TODO.md  ai-orchestrator.client.js  ai-orchestrator.tar  docker-compose.dev.yml  docker-compose.prod.yml  frontend.tar  mcp-gateway.tar  nginx-zentoria.conf  zentoria_personal_edition_architectuurplan_v1.md
.github/workflows/: ci.yml  deploy-proxmox.yml  deploy.yml
Server/: CLAUDE.md  backend.md
Server/monitoring_447/: docker-compose.yml
ai-orchestrator/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-orchestrator/src/: __init__.py  config.py  container.py  main.py
ai-orchestrator/src/agents/: __init__.py  base.py  chat.py  code.py  file.py  key.py  mail.py  search.py  security.py  workflow.py
ai-orchestrator/src/api/: __init__.py  routes.py  websocket.py
ai-orchestrator/src/core/: __init__.py  context.py  llm.py  models.py  rag.py  router.py
ai-orchestrator/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_models.py  test_router.py
database/: DATABASE_ARCHITECTURE.md
database/config/: backup_schedule.md  connection_pooling.md  indexing_strategy.md  pgbouncer.ini  postgresql.conf  qdrant_collections.json  redis.conf  redis_schema.md
database/migrations/: 001_zentoria_main_schema.sql  002_zentoria_vectors_schema.sql  003_n8n_database_schema.sql
database/scripts/: backup_postgresql.sh  backup_qdrant.sh  backup_redis.sh  init_databases.sh  init_qdrant.sh
docs/: API_VERSIONING.md  FRONTEND-ARCHITECTURE.md  PERFORMANCE.md  TESTING.md
docs/adr/: ADR-001-dependency-injection-container.md  ADR-002-opentelemetry-distributed-tracing.md  ADR-003-redis-pubsub-domain-events.md  ADR-004-jwt-refresh-token-rotation.md  ADR-005-audit-log-encryption.md  ADR-006-redis-tls-support.md  ADR-007-input-sanitization-prompt-injection.md  README.md
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  frontend.tar  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend-fixes/: api-client.ts
infrastructure/: DEPLOYMENT_SUMMARY.md  deploy.sh
mcp-gateway/: .env.example  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  package.json  tsconfig.json  vitest.config.ts
scripts/: health-check.sh
(+278 files in other folders)
